change key word

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>河北香衣邦贸易有限公司</title>
-    <meta name="keywords" content="河北香衣邦贸易有限公司" />
+    <meta name="keywords" content="河北香衣邦贸易有限公司,亿购,香衣邦,yigou" />
     <meta name="description" content="河北香衣邦贸易有限公司" />
     <meta http-equiv="content-language" content="zh-TW">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
