--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 </div>
                 <div class="col-md-12 store-list" id="store-list"></div>
                 <div class="col-md-12">
-                    <h4>新店正在建设中，敬请期待！</h4>
+                    <h4 class="text-center text-danger">新店正在建设中，敬请期待！</h4>
                 </div>
             </div>
         </div>
