--- a/index.html
+++ b/index.html
@@ -97,58 +97,58 @@
             <div class="col-md-5 wow fadeInLeft">
                 <img src="images/xcxyhs.png" class="img-responsive" alt="" />
             </div>
-            <div class="col-md-7 wow fadeInRight">
+            <div class="col-md-7 wow fadeInRight content">
                 <h2>您可以信赖的业界领导者</h2>
                 <p>公司坚持不懈地引进创新产品意念，确保我们能以最强的竞争力服务我们的客户。创立以来，公司规模逐步扩大，我们的服务范围也越来越广阔。</p>
-                <p>
+                <p class="item">
                     <span class="glyphicon glyphicon-grain mai-icon"></span>
                     <span>2000年3月，中山路65号店、77号店、88号店、民族路23号店开业！开创时尚潮流新地标！</span>
                 </p>
-                <p>
+                <p class="item">
                     <span class="glyphicon glyphicon-grain mai-icon"></span>
                     <span>2012年9月，亿购商城（南宫店）开业，首创服装行业零售新模式！</span>
                 </p>
-                <p>
+                <p class="item">
                     <span class="glyphicon glyphicon-fire"></span>
                     <span>2013年6月，亿购商城（永年店）开业，引领当地时尚新风尚！</span>
                 </p>
-                <p>
+                <p class="item">
                     <span class="glyphicon glyphicon-grain mai-icon"></span>
                     <span>2013年12月，亿购商城（临漳店）开业，打造服饰新天地！</span>
                 </p>
-                <p>
+                <p class="item">
                     <span class="glyphicon glyphicon-leaf"></span>
                     <span>2014年9月，亿购商城（磁县店）开业，绿色时尚新选择！</span>
                 </p>
-                <p>
+                <p class="item">
                     <span class="glyphicon glyphicon-fire"></span>
                     <span>2015年5月，亿购商城（沙河店）开业，点燃时尚激情！</span>
                 </p>
-                <p>
+                <p class="item">
                     <span class="glyphicon glyphicon-leaf"></span>
                     <span>2015年12月，亿购商城（元氏店）开业，生态时尚新趋势！</span>
                 </p>
-                <p>
+                <p class="item">
                     <span class="glyphicon glyphicon-grain mai-icon"></span>
                     <span>2016年5月，亿购商城（赞皇店）开业。</span>
                 </p>
-                <p>
+                <p class="item">
                     <span class="glyphicon glyphicon-grain mai-icon"></span>
                     <span>2016年9月，亿购商城（唐县店）开业，创新时尚零售体验！</span>
                 </p>
-                <p>
+                <p class="item">
                     <span class="glyphicon glyphicon-leaf"></span>
                     <span>2018年9月，亿购商城（林州店）开业。</span>
                 </p>
-                <p>
+                <p class="item">
                     <span class="glyphicon glyphicon-grain mai-icon"></span>
                     <span>2019年4月，亿购商城（濮阳店）开业，提升时尚生活品质！</span>
                 </p>
-                <p>
+                <p class="item">
                     <span class="glyphicon glyphicon-leaf"></span>
                     <span>2023年3月，亿购商城（卫辉店）开业</span>
                 </p>
-                <p>
+                <p class="item">
                     <span class="glyphicon glyphicon-leaf"></span>
                     <span>2024年6月，亿购商城（保定店）开业，智能时尚新体验！</span>
                 </p>
