--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta http-equiv="content-language" content="zh-CN">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/bootstrap-xinqi.css" />
-    <link rel="stylesheet" href="css/animate.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/css/bootstrap-xinqi.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/css/animate.css" />
     <link rel="stylesheet" href="css/font.css" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="javascript:;" class="navbar-brand">
-                    <img alt="河北香衣邦贸易有限公司 Logo" height="50" src="images/logo.png">
+                    <img alt="河北香衣邦贸易有限公司 Logo" height="50" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/logo.png">
                 </a>
             </div>
             <!--导航-->
@@ -67,21 +67,21 @@
             <div class="row wow fadeInUp" data-wow-duration="0.5s">
                 <div class="col-md-4">
                     <a href="javascript:;">
-                        <img src="images/index-icon1.png" class="img-responsive" alt="" />
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/index-icon1.png" class="img-responsive" alt="" />
                         <h3>专注服装 30 年</h3>
                         <p>优质产品、创新设计、<br>专业服务和实用的解决方案</p>
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="javascript:;">
-                        <img src="images/index-icon2.png" class="img-responsive" alt="" />
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/index-icon2.png" class="img-responsive" alt="" />
                         <h3>端到端服务</h3>
                         <p>从提供产品规划导售后服务<br>我们管理并加速所有生产流程</p>
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="javascript:;">
-                        <img src="images/index-icon3.png" class="img-responsive" alt="" />
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/index-icon3.png" class="img-responsive" alt="" />
                         <h3>全国供应</h3>
                         <p>在中国的重要城市皆有<br>办事处</p>
                     </a>
@@ -95,7 +95,7 @@
     <section id="about">
         <div class="container">
             <div class="col-md-5 wow fadeInLeft">
-                <img src="images/xcxyhs.png" class="img-responsive" alt="" />
+                <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/xcxyhs.png" class="img-responsive" alt="" />
             </div>
             <div class="col-md-7 wow fadeInRight content">
                 <h2>您可以信赖的业界领导者</h2>
@@ -174,7 +174,7 @@
                 <p>透过强大的全国分销网络、顶尖的产品分析和风险管理、以及快速投放市场，使您的购物体验更加良好。</p>
             </div>
             <div class="col-md-6">
-                <img src="images/xcxqygw.png" class="img-responsive" alt="" />
+                <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/xcxqygw.png" class="img-responsive" alt="" />
             </div>
         </div>
     </section>
@@ -190,22 +190,22 @@
                 <div class="flex-box">
                     <div class="col-md-3">
                         <div class="course">
-                            <img class="case-img" src="images/p1.jpg" class="img-responsive" alt="亿购商城" title="亿购商城" />
+                            <img class="case-img" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p1.jpg" class="img-responsive" alt="亿购商城" title="亿购商城" />
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="course">
-                            <img class="case-img" src="images/p2.jpg" class="img-responsive" alt="旅乐" title="旅乐" />
+                            <img class="case-img" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p2.jpg" class="img-responsive" alt="旅乐" title="旅乐" />
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="course">
-                            <img class="case-img" src="images/p3.jpg" class="img-responsive" alt="征途鸟" title="征途鸟" />
+                            <img class="case-img" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p3.jpg" class="img-responsive" alt="征途鸟" title="征途鸟" />
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="course">
-                            <img class="case-img" src="images/p4.jpg" class="img-responsive" alt="亿购商城" title="亿购商城" />
+                            <img class="case-img" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p4.jpg" class="img-responsive" alt="亿购商城" title="亿购商城" />
                         </div>
                     </div>
                 </div>
@@ -259,9 +259,9 @@
                     </address>
                 </div>
                 <div class="col-md-5 wow fadeInRight animated imgs">
-                    <img align="right" width="200" height="200" src="images/img1.jpg" class="img-responsive"
+                    <img align="right" width="200" height="200" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/img1.jpg" class="img-responsive"
                         alt="联系我们" />
-                    <img align="right" width="200" height="200" src="images/img2.jpg" class="img-responsive"
+                    <img align="right" width="200" height="200" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/img2.jpg" class="img-responsive"
                         alt="联系我们" />
                 </div>
 
@@ -282,9 +282,9 @@
     </footer>
     <!--footer-->
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/wow.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/js/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/js/wow.min.js"></script>
     <script charset="utf-8" src="https://map.qq.com/api/js?v=2.exp&key=OB4BZ-D4W3U-B7VVO-4PJWW-6TKDJ-WPB77"></script>
     <script src="js/map.js"></script>
     <script>
