--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/css/bootstrap-xinqi.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/css/animate.css" />
     <link rel="stylesheet" href="css/font.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -30,14 +29,15 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="javascript:;" class="navbar-brand">
-                    <img alt="河北香衣邦贸易有限公司 Logo" height="50" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/logo.png">
+                    <img alt="河北香衣邦贸易有限公司 Logo" height="50"
+                        src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/logo.png">
                 </a>
             </div>
             <!--导航-->
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="#about">关于我们</a></li>
-                    <li><a href="#course">子品牌</a></li>
+                    <li><a href="#course">旗下品牌</a></li>
                     <li><a href="#store">线下门店</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -51,7 +51,7 @@
 
     <!--home-->
     <section id="home">
-        <div class="jumbotron banner wow fadeInRight">
+        <div class="jumbotron banner wow fadeInUp">
             <div class="container">
                 <h1>河北香衣邦贸易有限公司</h1>
                 <p>河北香衣邦贸易有限公司前身为石家庄旅乐贸易有限公司，成立于 2001 年。自 2017
@@ -67,21 +67,24 @@
             <div class="row wow fadeInUp" data-wow-duration="0.5s">
                 <div class="col-md-4">
                     <a href="javascript:;">
-                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/index-icon1.png" class="img-responsive" alt="" />
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/index-icon1.png"
+                            class="img-responsive" alt="" />
                         <h3>专注服装 30 年</h3>
                         <p>优质产品、创新设计、<br>专业服务和实用的解决方案</p>
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="javascript:;">
-                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/index-icon2.png" class="img-responsive" alt="" />
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/index-icon2.png"
+                            class="img-responsive" alt="" />
                         <h3>端到端服务</h3>
                         <p>从提供产品规划到售后服务<br>我们管理并加速所有生产流程</p>
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="javascript:;">
-                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/index-icon3.png" class="img-responsive" alt="" />
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/index-icon3.png"
+                            class="img-responsive" alt="" />
                         <h3>全国供应</h3>
                         <p>在中国的重要城市皆有<br>办事处</p>
                     </a>
@@ -95,7 +98,8 @@
     <section id="about">
         <div class="container">
             <div class="col-md-5 wow fadeInLeft">
-                <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/xcxyhs.png" class="img-responsive" alt="" />
+                <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/xcxyhs.png" class="img-responsive"
+                    alt="" />
             </div>
             <div class="col-md-7 wow fadeInRight content">
                 <h2>您可以信赖的业界领导者</h2>
@@ -174,7 +178,8 @@
                 <p>透过强大的全国分销网络、顶尖的产品分析和风险管理、以及快速投放市场，使您的购物体验更加良好。</p>
             </div>
             <div class="col-md-6">
-                <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/xcxqygw.png" class="img-responsive" alt="" />
+                <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/xcxqygw.png" class="img-responsive"
+                    alt="" />
             </div>
         </div>
     </section>
@@ -185,27 +190,35 @@
         <div class="container">
             <div class="row wow fadeIn" data-wow-delay="0.6s">
                 <div class="col-md-12">
-                    <h2>旗下品牌</h2>
+                    <h2 class="text-center">旗下品牌</h2>
                 </div>
                 <div class="flex-box">
                     <div class="col-md-3">
                         <div class="course">
-                            <img class="case-img" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p1.jpg" class="img-responsive" alt="亿购商城" title="亿购商城" />
+                            <img class="case-img"
+                                src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p1.jpg"
+                                class="img-responsive" alt="亿购商城" title="亿购商城" />
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="course">
-                            <img class="case-img" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p2.jpg" class="img-responsive" alt="旅乐" title="旅乐" />
+                            <img class="case-img"
+                                src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p2.jpg"
+                                class="img-responsive" alt="旅乐" title="旅乐" />
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="course">
-                            <img class="case-img" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p3.jpg" class="img-responsive" alt="征途鸟" title="征途鸟" />
+                            <img class="case-img"
+                                src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p3.jpg"
+                                class="img-responsive" alt="征途鸟" title="征途鸟" />
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="course">
-                            <img class="case-img" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p4.jpg" class="img-responsive" alt="亿购商城" title="亿购商城" />
+                            <img class="case-img"
+                                src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p4.jpg"
+                                class="img-responsive" alt="亿购商城" title="亿购商城" />
                         </div>
                     </div>
                 </div>
@@ -230,6 +243,36 @@
         </div>
     </section>
     <!--store-->
+
+    <section id="vip">
+        <div class="container">
+            <div class="col-md-12">
+                <h2 class="text-center">做<b class="color">会员</b>，更省钱！</h2>
+            </div>
+            <div class="flex-box">
+                <div class="img">
+                    <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c1.jpg" alt="">
+                    <p>亿购官方微信</p>
+                </div>
+                <div class="img">
+                    <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c2.jpg" alt="">
+                    <p>微信公众号</p>
+                </div>
+                <div class="img">
+                    <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c3.jpg" alt="">
+                    <p>加入亿购会员</p>
+                </div>
+                <div class="img">
+                    <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c4.jpg" alt="">
+                    <p>亿购抖音号</p>
+                </div>
+                <div class="img">
+                    <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c5.jpg" alt="">
+                    <p>亿购快手号</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!--contact-->
     <section id="contact">
@@ -259,9 +302,11 @@
                     </address>
                 </div>
                 <div class="col-md-5 wow fadeInRight animated imgs">
-                    <img align="right" width="200" height="200" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/img1.jpg" class="img-responsive"
+                    <img align="right" width="200" height="200"
+                        src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/img1.jpg" class="img-responsive"
                         alt="联系我们" />
-                    <img align="right" width="200" height="200" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/img2.jpg" class="img-responsive"
+                    <img align="right" width="200" height="200"
+                        src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/img2.jpg" class="img-responsive"
                         alt="联系我们" />
                 </div>
 
