--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <!--导航-->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default" id="start">
         <div class="container">
             <div class="navbar-header">
                 <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="javascript:;" class="navbar-brand">
+                <a href="#start" class="navbar-brand">
                     <img alt="河北香衣邦贸易有限公司 Logo" height="50"
                         src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/logo.png">
                 </a>
@@ -41,7 +41,7 @@
                     <li><a href="#store">线下门店</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#contact">联系我们</a></li>
+                    <li><a href="#vip">联系我们</a></li>
                 </ul>
             </div>
             <!--导航-->
@@ -53,7 +53,7 @@
     <section id="home">
         <div class="jumbotron banner wow fadeInUp">
             <div class="container">
-                <h1>河北香衣邦贸易有限公司</h1>
+                <h1>河北<span class="color">香衣邦</span>贸易有限公司</h1>
                 <p>河北香衣邦贸易有限公司前身为石家庄旅乐贸易有限公司，成立于 2001 年。自 2017
                     年更名为河北香衣邦贸易有限公司。公司以卓越的产品质量和周到的客户服务赢得了广泛的市场认可，迅速成长为一个充满活力和潜力的贸易企业。公司专注于服装、鞋帽和日用品的贸易。</p>
             </div>
