--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
 
     <!--home-->
     <section id="home">
-        <div class="jumbotron banner wow fadeInUp">
-            <div class="container">
+        <div class="jumbotron banner">
+            <div class="video">
+                <video src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/videos/video.mp4" preload="auto" autoplay muted loop></video>
+            </div>
+            <div class="container wow fadeInUp">
                 <h1>河北<span class="color">香衣邦</span>贸易有限公司</h1>
                 <p>河北香衣邦贸易有限公司前身为石家庄旅乐贸易有限公司，成立于 2001 年。自 2017
                     年更名为河北香衣邦贸易有限公司。公司以卓越的产品质量和周到的客户服务赢得了广泛的市场认可，迅速成长为一个充满活力和潜力的贸易企业。公司专注于服装、鞋帽和日用品的贸易。</p>
@@ -340,6 +343,9 @@
     <script>
         $('img').on('error', function () {
             $(this).attr('src', $(this).attr('src').replace('https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/', 'images/'));
+        })
+        $('video').on('error', function () {
+            $(this).attr('src', $(this).attr('src').replace('https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/videos/', 'videos/'));
         })
     </script>
 </body>
