--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
     <section id="home">
         <div class="jumbotron banner">
             <div class="video">
-                <video src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/videos/video.mp4" preload="auto" autoplay muted loop></video>
+                <video src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/videos/video.mp4" preload="auto" id="myVideo"
+                    autoplay muted loop x5-video-player-fullscreen="true" x5-playsinline playsinline
+                    webkit-playsinline></video>
             </div>
             <div class="container wow fadeInUp">
                 <h1>河北<span class="color">香衣邦</span>贸易有限公司</h1>
