--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
     <section id="home">
         <div class="jumbotron banner">
             <div class="video">
-                <video preload id="myVideo"
-                    autoplay muted loop x5-video-player-fullscreen="true" x5-playsinline playsinline
-                    webkit-playsinline>
-                    <source src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/videos/video.mp4" type="video/mp4">
+                <video preload src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/videos/video.mp4" id="myVideo"
+                    autoplay muted loop x5-video-player-fullscreen="true" x5-playsinline playsinline webkit-playsinline>
                 </video>
             </div>
             <div class="container wow fadeInUp">
