--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>河北香衣邦贸易有限公司</title>
-    <meta name="keywords" content="河北香衣邦贸易有限公司, 亿购, 亿购商城, 香衣邦, yigou" />
+    <meta name="keywords" content="河北香衣邦贸易有限公司, 亿购, 亿购商城, 香衣邦, 河北香衣邦, yigou, xiangyibang, xyb, yg, yigoushangcheng, ygsc" />
     <meta name="description" content="河北香衣邦贸易有限公司前身为石家庄旅乐贸易有限公司，成立于 2001 年。自 2017
-    年更名为河北香衣邦贸易有限公司，旗下有亿购、征途鸟、旅乐等知名品牌。公司以卓越的产品质量和周到的客户服务赢得了广泛的市场认可，迅速成长为一个充满活力和潜力的贸易企业。公司专注于服装、鞋帽和日用品的贸易。" />
+    年更名为河北香衣邦贸易有限公司，旗下有亿购、征途鸟、旅乐、亿购商城等知名品牌。公司以卓越的产品质量和周到的客户服务赢得了广泛的市场认可，迅速成长为一个充满活力和潜力的贸易企业。公司专注于服装、鞋帽和日用品的贸易。" />
     <meta name="author" content="河北香衣邦贸易有限公司" />
     <meta name="copyright" content="河北香衣邦贸易有限公司" />
     <meta name="robots" content="all" />
