--- a/index.html
+++ b/index.html
@@ -257,27 +257,27 @@
 
     <section id="vip">
         <div class="container">
-            <div class="col-md-12">
+            <div class="col-md-12 wow fadeInUp">
                 <h2 class="text-center">做<b class="color">会员</b>，更省钱！</h2>
             </div>
             <div class="flex-box">
-                <div class="img">
+                <div class="img wow fadeInLeft" data-wow-delay="0.5s">
                     <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c1.jpg" alt="">
                     <p>亿购官方微信</p>
                 </div>
-                <div class="img">
+                <div class="img wow fadeInLeft" data-wow-delay="0.2s">
                     <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c2.jpg" alt="">
                     <p>微信公众号</p>
                 </div>
-                <div class="img">
+                <div class="img wow fadeInUp">
                     <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c3.jpg" alt="">
                     <p>加入亿购会员</p>
                 </div>
-                <div class="img">
+                <div class="img wow fadeInRight" data-wow-delay="0.2s">
                     <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c4.jpg" alt="">
                     <p>亿购抖音号</p>
                 </div>
-                <div class="img">
+                <div class="img wow fadeInRight" data-wow-delay="0.5s">
                     <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c5.jpg" alt="">
                     <p>亿购快手号</p>
                 </div>
