--- a/index.html
+++ b/index.html
@@ -261,25 +261,35 @@
                 <h2 class="text-center">做<b class="color">会员</b>，更省钱！</h2>
             </div>
             <div class="flex-box">
-                <div class="img wow fadeInLeft" data-wow-delay="0.5s">
-                    <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c1.jpg" alt="">
-                    <p>亿购官方微信</p>
+                <div class="wow fadeInLeft" data-wow-delay="0.5s">
+                    <div class="img">
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c1.jpg" alt="">
+                        <p>亿购官方微信</p>
+                    </div>
                 </div>
-                <div class="img wow fadeInLeft" data-wow-delay="0.2s">
-                    <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c2.jpg" alt="">
-                    <p>微信公众号</p>
+                <div class="wow fadeInLeft" data-wow-delay="0.2s">
+                    <div class="img">
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c2.jpg" alt="">
+                        <p>微信公众号</p>
+                    </div>
                 </div>
-                <div class="img wow fadeInUp">
-                    <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c3.jpg" alt="">
-                    <p>加入亿购会员</p>
+                <div class="wow fadeInUp">
+                    <div class="img">
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c3.jpg" alt="">
+                        <p>加入亿购会员</p>
+                    </div>
                 </div>
-                <div class="img wow fadeInRight" data-wow-delay="0.2s">
-                    <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c4.jpg" alt="">
-                    <p>亿购抖音号</p>
+                <div class="wow fadeInRight" data-wow-delay="0.2s">
+                    <div class="img">
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c4.jpg" alt="">
+                        <p>亿购抖音号</p>
+                    </div>
                 </div>
-                <div class="img wow fadeInRight" data-wow-delay="0.5s">
-                    <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c5.jpg" alt="">
-                    <p>亿购快手号</p>
+                <div class="wow fadeInRight" data-wow-delay="0.5s">
+                    <div class="img">
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c5.jpg" alt="">
+                        <p>亿购快手号</p>
+                    </div>
                 </div>
             </div>
         </div>
