--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>河北香衣邦贸易有限公司</title>
+    <meta name="baidu-site-verification" content="codeva-hrnGkRUiIc" />
+    <meta name="msvalidate.01" content="B05BD8B1CBC64E9E827F84E6ED249F89" />
     <meta name="keywords"
         content="河北香衣邦贸易有限公司, 亿购, 亿购商城, 香衣邦, 河北香衣邦, yigou, xiangyibang, xyb, yg, yigoushangcheng, ygsc" />
     <meta name="description" content="河北香衣邦贸易有限公司前身为石家庄旅乐贸易有限公司，成立于 2001 年。自 2017
