--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>河北香衣邦贸易有限公司</title>
-    <meta name="baidu-site-verification" content="codeva-hrnGkRUiIc" />
+    <meta name="baidu-site-verification" content="codeva-EhK9cFIUNz" />
     <meta name="msvalidate.01" content="B05BD8B1CBC64E9E827F84E6ED249F89" />
     <meta name="keywords"
         content="河北香衣邦贸易有限公司, 亿购, 亿购商城, 香衣邦, 河北香衣邦, yigou, xiangyibang, xyb, yg, yigoushangcheng, ygsc" />
