--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 
 <head>
-    <title>河北香衣邦贸易有限公司</title>
+    <title>河北香衣邦贸易有限公司 | 旗下品牌 | 亿购 - 旅乐 - 征途鸟</title>
     <meta name="baidu-site-verification" content="codeva-EhK9cFIUNz" />
     <meta name="msvalidate.01" content="B05BD8B1CBC64E9E827F84E6ED249F89" />
     <meta name="keywords"
