--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="#start" class="navbar-brand">
-                    <img alt="河北香衣邦贸易有限公司 Logo" height="50" src="images/logo.png">
+                    <img alt="河北香衣邦贸易有限公司 Logo" height="50" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/logo.png">
                 </a>
             </div>
             <!--导航-->
@@ -56,8 +56,8 @@
         <div class="jumbotron banner">
             <div class="video">
                 <video preload autoplay loop id="myVideo" muted x5-video-player-fullscreen="true" x5-playsinline
-                    playsinline webkit-playsinline poster="">
-                    <source src="videos/video.mp4" type="video/mp4">
+                    playsinline webkit-playsinline>
+                    <source src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/videos/video.mp4" type="video/mp4">
                     </source>
                     <source src="videos/video.mp4" type="video/mp4">
                     </source>
@@ -79,21 +79,21 @@
             <div class="row wow fadeInUp" data-wow-duration="0.5s">
                 <div class="col-md-4">
                     <a href="javascript:;">
-                        <img src="images/index-icon1.png" class="img-responsive" alt="" />
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/index-icon1.png" class="img-responsive" alt="" />
                         <h3>专注服装 30 年</h3>
                         <p>优质产品、创新设计、<br>专业服务和实用的解决方案</p>
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="javascript:;">
-                        <img src="images/index-icon2.png" class="img-responsive" alt="" />
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/index-icon2.png" class="img-responsive" alt="" />
                         <h3>端到端服务</h3>
                         <p>从提供产品规划到售后服务<br>我们管理并加速所有生产流程</p>
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="javascript:;">
-                        <img src="images/index-icon3.png" class="img-responsive" alt="" />
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/index-icon3.png" class="img-responsive" alt="" />
                         <h3>全国供应</h3>
                         <p>在中国的重要城市皆有<br>办事处</p>
                     </a>
@@ -107,7 +107,7 @@
     <section id="about">
         <div class="container">
             <div class="col-md-5 wow fadeInLeft">
-                <img src="images/xcxyhs.png" class="img-responsive" alt="" />
+                <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/xcxyhs.png" class="img-responsive" alt="" />
             </div>
             <div class="col-md-7 wow fadeInRight content">
                 <h2>您可以信赖的业界领导者</h2>
@@ -186,7 +186,7 @@
                 <p>透过强大的全国分销网络、顶尖的产品分析和风险管理、以及快速投放市场，使您的购物体验更加良好。</p>
             </div>
             <div class="col-md-6">
-                <img src="images/xcxqygw.png" class="img-responsive" alt="" />
+                <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/xcxqygw.png" class="img-responsive" alt="" />
             </div>
         </div>
     </section>
@@ -202,22 +202,22 @@
                 <div class="flex-box">
                     <div class="col-md-3">
                         <div class="course">
-                            <img class="case-img" src="images/p1.jpg" class="img-responsive" alt="亿购商城" title="亿购商城" />
+                            <img class="case-img" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p1.jpg" class="img-responsive" alt="亿购商城" title="亿购商城" />
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="course">
-                            <a href="https://lvle.xiangyibang.com" target="_blank"><img class="case-img" src="images/p2.jpg" class="img-responsive" alt="旅乐" title="旅乐" /></a>
+                            <a href="https://lvle.xiangyibang.com" target="_blank"><img class="case-img" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p2.jpg" class="img-responsive" alt="旅乐" title="旅乐" /></a>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="course">
-                            <img class="case-img" src="images/p3.jpg" class="img-responsive" alt="征途鸟" title="征途鸟" />
+                            <img class="case-img" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p3.jpg" class="img-responsive" alt="征途鸟" title="征途鸟" />
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="course">
-                            <img class="case-img" src="images/p4.jpg" class="img-responsive" alt="亿购商城" title="亿购商城" />
+                            <img class="case-img" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/p4.jpg" class="img-responsive" alt="亿购商城" title="亿购商城" />
                         </div>
                     </div>
                 </div>
@@ -251,31 +251,31 @@
             <div class="flex-box">
                 <div class="wow fadeInLeft" data-wow-delay="0.5s">
                     <div class="img">
-                        <img src="images/c1.jpg" alt="">
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c1.jpg" alt="">
                         <p>亿购官方微信</p>
                     </div>
                 </div>
                 <div class="wow fadeInLeft" data-wow-delay="0.2s">
                     <div class="img">
-                        <img src="images/c2.jpg" alt="">
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c2.jpg" alt="">
                         <p>微信公众号</p>
                     </div>
                 </div>
                 <div class="wow fadeInUp">
                     <div class="img">
-                        <img src="images/c3.jpg" alt="">
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c3.jpg" alt="">
                         <p>加入亿购会员</p>
                     </div>
                 </div>
                 <div class="wow fadeInRight" data-wow-delay="0.2s">
                     <div class="img">
-                        <img src="images/c4.jpg" alt="">
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c4.jpg" alt="">
                         <p>亿购抖音号</p>
                     </div>
                 </div>
                 <div class="wow fadeInRight" data-wow-delay="0.5s">
                     <div class="img">
-                        <img src="images/c5.jpg" alt="">
+                        <img src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/c5.jpg" alt="">
                         <p>亿购快手号</p>
                     </div>
                 </div>
@@ -311,9 +311,9 @@
                     </address>
                 </div>
                 <div class="col-md-5 wow fadeInRight animated imgs">
-                    <img align="right" width="200" height="200" src="images/img1.jpg" class="img-responsive"
+                    <img align="right" width="200" height="200" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/img1.jpg" class="img-responsive"
                         alt="联系我们" />
-                    <img align="right" width="200" height="200" src="images/img2.jpg" class="img-responsive"
+                    <img align="right" width="200" height="200" src="https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/img2.jpg" class="img-responsive"
                         alt="联系我们" />
                 </div>
 
@@ -346,7 +346,7 @@
     </script>
     <script>
         $('img').on('error', function () {
-            $(this).attr('src', $(this).attr('src').replace('images/', 'images/'));
+            $(this).attr('src', $(this).attr('src').replace('https://cdn.jsdelivr.net/gh/yi-gou/yi-gou.github.io/images/', 'images/'));
         })
         const myVideo = document.getElementById("myVideo");
         function tryPlay(num) {
